Completed all but two remaining unit tests for  async responses. Internal documentation is complete for template widget in all files that permit internal commenting.

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -1,3 +1,4 @@
+// Template Note: Boilerplate styles for any widget
 // Sass variables and mixins:
 // ----------------------------------
 $sans-font-family: 'Museo Sans', 'Arial', 'Helvetica', sans;
