Update custom scoreScreen to better reflect how it is used

--- a/src/scoreScreen.css
+++ b/src/scoreScreen.css
@@ -1,4 +1,4 @@
-// Template Note: Boilerplate styles for any widget
+/* Template Note: Boilerplate styles for any widget */
 body {
 	background: #FFFFFF;
 	font-family: Lato, sans-serif;
