--- a/src/player.scss
+++ b/src/player.scss
@@ -1,57 +1,7 @@
-// Template Note: Boilerplate styles for any widget
+// player sass file. The sass gets compiled into CSS by webpack during the widget build process
+// if you're uncomfortable with sass, you can replace this file with a .css file instead.
+
 body {
 	background: #FFFFFF;
 	font-family: Lato, sans-serif;
-}
-
-#container {
-	position: relative;
-}
-
-#container,
-#modalContainer {
-	width: 100%;
-	height: 450px;
-	overflow-y: hidden;
-}
-
-#modalContainer {
-	position: absolute;
-	z-index: 1000;
-}
-
-#modalContainer h2 {
-	width: 550px;
-	margin-left: 25px;
-	color: #3333bb;
-	font-family: sans-serif;
-	font-size: 24px;
-}
-
-#logo {
-	background: url("assets/widgetlogo.png");
-	width: 312px;
-	height: 63px;
-	margin-left: 25px;
-	text-indent: -9001px;
-}
-
-#instructions,
-#question,
-#answer {
-	width: 550px;
-	margin-left: 25px;
-	color: #7a7c7c;
-	font-family: sans-serif;
-	font-size: 14px;
-}
-
-#question,
-#answer {
-	margin-top: 25px;
-}
-
-#answer ul
-{
-	list-style: none;
 }
